# gestao-cases

./: .env.db.example  .env.example  .gitignore  CONTRIBUTING.md  ESTADO-ATUAL.md  GUIA-TESTE-E2E.md  LICENSE  README.md  UX-FILE-NOT-FOUND.md  docker-compose.build.yml  docker-compose.test.yml  docker-compose.yml  e2e-test-findings.md  gestao-cases-master.txt  requirements.md  start.bat
agents/table-search-agent/: .env.example  .gitignore  README.md  pyproject.toml
agents/table-search-agent/docker/: Dockerfile  docker-compose.yml
agents/table-search-agent/src/: __init__.py
agents/table-search-agent/src/agent/: __init__.py  graph.py  graph_v2.py  graph_v3.py  graph_v4.py  graph_v5.py  graph_v6.py  state.py  state_v2.py
agents/table-search-agent/src/agent/disambiguation/: __init__.py  ambiguity_detector.py  historical_scorer.py  scorer.py
agents/table-search-agent/src/agent/indexing/: __init__.py  column_indexer.py  pipeline.py
agents/table-search-agent/src/agent/knowledge/: __init__.py  synonyms.py
agents/table-search-agent/src/agent/memory/: __init__.py  feedback_store.py  intent_cache.py  long_term.py  short_term.py
agents/table-search-agent/src/agent/metrics/: __init__.py  collector.py
agents/table-search-agent/src/agent/monitoring/: __init__.py  datamesh_exporter.py  health_checker.py  metrics_collector.py
agents/table-search-agent/src/agent/nodes/: __init__.py  ambiguity_check.py  column_search.py  context_analyzer.py  (+10 more)
agents/table-search-agent/src/api/: __init__.py  main.py  schemas.py
agents/table-search-agent/src/core/: __init__.py  config.py
(+274 files in other folders)
